aurex-meta.conf updated

--- a/aurex-meta.conf
+++ b/aurex-meta.conf
@@ -10,3 +10,9 @@ ARCHIVE_EXCEPTIONS=""
 UBUNTU_MIRROR="http://archive.ubuntu.com/ubuntu/"
 PARTNER_MIRROR="http://archive.canonical.com/ubuntu/"
 AUREX_MIRROR="http://192.168.100.200/aurex/"
+
+# update-lists
+CUSTOM_DEBOOTSTRAP_SOURCESLIST="aurex-chroot/sources.list"
+CUSTOM_DEBOOTSTRAP_PKGLIST="aurex-chroot/packages.pkg"
+CUSTOM_DEBOOTSTRAP_COPY=""
+CUSTOM_DEBOOSTRAP_CMD="aurex-transmute --no-packages"
