--- a/aurex-meta.conf
+++ b/aurex-meta.conf
@@ -12,7 +12,7 @@ PARTNER_MIRROR="http://archive.canonical.com/ubuntu/"
 AUREX_MIRROR="http://192.168.100.200/aurex/"
 
 # update-lists
-CUSTOM_DEBOOTSTRAP_SOURCESLIST="aurex-chroot/sources.list"
-CUSTOM_DEBOOTSTRAP_PKGLIST="aurex-chroot/packages.pkg"
-CUSTOM_DEBOOTSTRAP_COPY=""
-CUSTOM_DEBOOSTRAP_CMD="aurex-transmute --no-packages"
+CUSTOM_DEBOOTSTRAP_SOURCESLIST=""
+CUSTOM_DEBOOTSTRAP_COPY="aurex-chroot"
+CUSTOM_DEBOOTSTRAP_PKGS=""
+CUSTOM_DEBOOSTRAP_CMD=""
