Maybe it's time to give a chance to aurex-meta

--- a/aurex-meta.conf
+++ b/aurex-meta.conf
@@ -2,7 +2,8 @@ CURRENT_DIST=lucid
 DIST_LIST=""
 COMP_LIST=""
 CURRENT_DIR="$(pwd)"
-SEED_LIST="minimal standard desktop aurex-desktop"
+SEED_LIST="minimal standard desktop aurex-minimal aurex-standard aurex-desktop aurex-supported"
+
 BZR_DIST="lp:~ubuntu-core-dev/ubuntu-seeds/ubuntu.lucid"
 BZR_PLAT="lp:~ubuntu-core-dev/ubuntu-seeds/platform.lucid"
 ARCHIVE_URL_LIST=""
