--- a/debian/control
+++ b/debian/control
@@ -44,12 +44,34 @@ Description: The Ubuntu desktop system
  It is also used to help ensure proper upgrades, so it is recommended that
  it not be removed.
 
+Package: aurex-minimal
+Architecture: any
+Depends: ${misc:Depends}, ${germinate:Depends}
+Recommends: ${germinate:Recommends}
+Description: Aurex minimal system
+ This (meta)package depends on all of the packages for a
+ minimal aurex system
+ .
+ It is also used to help ensure proper upgrades, so it is recommended that
+ it not be removed.
+
+Package: aurex-standard
+Architecture: any
+Depends: ${misc:Depends}, ${germinate:Depends}
+Recommends: ${germinate:Recommends}
+Description: Aurex standard system
+ This (meta)package depends on all of the packages in the standard
+ aurex system
+ .
+ It is also used to help ensure proper upgrades, so it is recommended that
+ it not be removed.
+
 Package: aurex-desktop
 Architecture: any
 Depends: ${misc:Depends}, ${germinate:Depends}
 Recommends: ${germinate:Recommends}
 Description: Aurex generic desktop system
- This (meta)package depends on all of the packages in the standard
+ This (meta)package depends on all of the packages for a generic
  aurex desktop system
  .
  It is also used to help ensure proper upgrades, so it is recommended that
