--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,8 @@ Source: aurex-meta
 Section: metapackages
 Priority: optional
 Maintainer: Luis Antonio Garcia Gisbert <luisgg@gmail.com>
-Standards-Version: 3.8.3
-Build-Depends: debhelper (>= 7.0.8), germinate (>= 1.21-0aurex2), rsync, bzr, debootstrap
+Standards-Version: 3.8.4
+Build-Depends: debhelper (>= 7.0.50~), germinate (>= 1.21-0aurex3), rsync, bzr, debootstrap
 
 Package: ubuntu-minimal
 Architecture: any
