multi arch support

--- a/aurex-meta.conf
+++ b/aurex-meta.conf
@@ -17,3 +17,5 @@ CUSTOM_DEBOOTSTRAP_SOURCESLIST=""
 CUSTOM_DEBOOTSTRAP_COPY="aurex-chroot"
 CUSTOM_DEBOOTSTRAP_PKGS=""
 CUSTOM_DEBOOSTRAP_CMD=""
+
+TARGET_DIR="/var/cache/aurex-meta"
