--- a/update.cfg.in
+++ b/update.cfg.in
@@ -6,7 +6,7 @@ seeds: _@_SEED_LIST_@_
 metapackage_map/minimal: ubuntu-minimal
 metapackage_map/standard: ubuntu-standard
 metapackage_map/desktop: ubuntu-desktop
-architectures: i386
+architectures: i386 amd64
 dists: _@_DIST_LIST_@_
 seed_base: file://_@_CURRENT_DIR_@_/seeds/
 archive_base/default: _@_ARCHIVE_URL_LIST_@_
