mirror url fixed

--- a/aurex-meta.conf
+++ b/aurex-meta.conf
@@ -10,7 +10,7 @@ ARCHIVE_URL_LIST=""
 ARCHIVE_EXCEPTIONS=""
 UBUNTU_MIRROR="http://archive.ubuntu.com/ubuntu/"
 PARTNER_MIRROR="http://archive.canonical.com/ubuntu/"
-AUREX_MIRROR="http://http://192.168.10.40/aurex/"
+AUREX_MIRROR="http://192.168.10.40/aurex/"
 
 # update-lists
 CUSTOM_DEBOOTSTRAP_SOURCESLIST=""
