--- a/aurex-meta.conf
+++ b/aurex-meta.conf
@@ -8,7 +8,8 @@ BZR_DIST="lp:~ubuntu-core-dev/ubuntu-seeds/ubuntu.lucid"
 BZR_PLAT="lp:~ubuntu-core-dev/ubuntu-seeds/platform.lucid"
 ARCHIVE_URL_LIST=""
 ARCHIVE_EXCEPTIONS=""
-UBUNTU_MIRROR="http://archive.ubuntu.com/ubuntu/"
+#UBUNTU_MIRROR="http://archive.ubuntu.com/ubuntu/"
+UBUNTU_MIRROR="http://192.168.10.40/ubuntu/"
 PARTNER_MIRROR="http://archive.canonical.com/ubuntu/"
 AUREX_MIRROR="http://192.168.10.40/aurex/"
 
