Added local snapshot repository for firefox

--- a/aurex-meta.conf
+++ b/aurex-meta.conf
@@ -12,6 +12,7 @@ ARCHIVE_EXCEPTIONS=""
 UBUNTU_MIRROR="http://192.168.10.40/ubuntu/"
 PARTNER_MIRROR="http://archive.canonical.com/ubuntu/"
 AUREX_MIRROR="http://192.168.10.40/aurex/"
+LOCAL_MIRROR="http://192.168.10.40"
 
 # update-lists
 CUSTOM_DEBOOTSTRAP_SOURCESLIST=""
