disabled local-ppa-firefox source

--- a/aurex-meta.conf
+++ b/aurex-meta.conf
@@ -9,10 +9,10 @@ BZR_PLAT="lp:~ubuntu-core-dev/ubuntu-seeds/platform.lucid"
 ARCHIVE_URL_LIST=""
 ARCHIVE_EXCEPTIONS=""
 #UBUNTU_MIRROR="http://archive.ubuntu.com/ubuntu/"
-UBUNTU_MIRROR="http://192.168.10.40/ubuntu/"
+UBUNTU_MIRROR="ftp://mirror.ovh.net/mirrors/ftp.ubuntu.com/ubuntu/"
 PARTNER_MIRROR="http://archive.canonical.com/ubuntu/"
-AUREX_MIRROR="http://192.168.10.40/aurex/"
-LOCAL_MIRROR="http://192.168.10.40"
+AUREX_MIRROR="http://172.16.0.40/aurex/"
+LOCAL_MIRROR="http://172.16.0.40/archive"
 
 # update-lists
 CUSTOM_DEBOOTSTRAP_SOURCESLIST=""
