Initial changes for precise

--- a/aurex-meta.conf
+++ b/aurex-meta.conf
@@ -1,11 +1,11 @@
-CURRENT_DIST=lucid
+CURRENT_DIST=precise
 DIST_LIST=""
 COMP_LIST=""
 CURRENT_DIR="$(pwd)"
 SEED_LIST="minimal standard desktop aurex-minimal aurex-standard aurex-desktop aurex-supported aurex-inf aurex-smr aurex-asir"
 
-BZR_DIST="lp:~ubuntu-core-dev/ubuntu-seeds/ubuntu.lucid"
-BZR_PLAT="lp:~ubuntu-core-dev/ubuntu-seeds/platform.lucid"
+BZR_DIST="lp:~ubuntu-core-dev/ubuntu-seeds/ubuntu.precise"
+BZR_PLAT="lp:~ubuntu-core-dev/ubuntu-seeds/platform.precise"
 ARCHIVE_URL_LIST=""
 ARCHIVE_EXCEPTIONS=""
 #UBUNTU_MIRROR="http://archive.ubuntu.com/ubuntu/"
