--- a/aurex-meta.conf
+++ b/aurex-meta.conf
@@ -11,8 +11,8 @@ ARCHIVE_EXCEPTIONS=""
 #UBUNTU_MIRROR="http://archive.ubuntu.com/ubuntu/"
 UBUNTU_MIRROR="ftp://mirror.ovh.net/mirrors/ftp.ubuntu.com/ubuntu/"
 PARTNER_MIRROR="http://archive.canonical.com/ubuntu/"
-AUREX_MIRROR="http://172.16.0.40/aurex/"
-LOCAL_MIRROR="http://172.16.0.40/archive"
+AUREX_MIRROR="http://localhost/aurex/"
+LOCAL_MIRROR="http://localhost/archive"
 
 # update-lists
 CUSTOM_DEBOOTSTRAP_SOURCESLIST=""
