--- a/aurex-meta.conf
+++ b/aurex-meta.conf
@@ -17,7 +17,8 @@ LOCAL_MIRROR="http://localhost/archive"
 # update-lists
 CUSTOM_DEBOOTSTRAP_SOURCESLIST=""
 CUSTOM_DEBOOTSTRAP_COPY="aurex-chroot"
-CUSTOM_DEBOOTSTRAP_PKGS=""
+# fix strange chroot problems with grub-pc in amd64
+CUSTOM_DEBOOTSTRAP_PKGS="grub2-common"
 CUSTOM_DEBOOSTRAP_CMD=""
 
 TARGET_DIR="/var/cache/aurex-meta"
