aurex-builddepends renamed to aurex-mods

--- a/aurex-meta.conf
+++ b/aurex-meta.conf
@@ -2,7 +2,7 @@ CURRENT_DIST=precise
 DIST_LIST=""
 COMP_LIST=""
 CURRENT_DIR="$(pwd)"
-SEED_LIST="minimal standard desktop aurex-minimal aurex-standard aurex-desktop aurex-xfce-desktop aurex-supported aurex-inf aurex-smr aurex-asir aurex-builddepends"
+SEED_LIST="minimal standard desktop aurex-minimal aurex-standard aurex-desktop aurex-xfce-desktop aurex-supported aurex-inf aurex-smr aurex-asir aurex-mods"
 
 BZR_DIST="lp:~ubuntu-core-dev/ubuntu-seeds/ubuntu.precise"
 BZR_PLAT="lp:~ubuntu-core-dev/ubuntu-seeds/platform.precise"
