--- a/aurex-meta.conf
+++ b/aurex-meta.conf
@@ -2,7 +2,7 @@ CURRENT_DIST=precise
 DIST_LIST=""
 COMP_LIST=""
 CURRENT_DIR="$(pwd)"
-SEED_LIST="minimal standard desktop aurex-minimal aurex-standard aurex-desktop aurex-xfce-desktop aurex-supported aurex-inf aurex-smr aurex-asir aurex-mods aurex-daw ausias-netstation ausias-printstation ausias-classroom-student ausias-classroom-teacher ausias-desktop aurex-desktop-depinf ausias-desktop-depinf"
+SEED_LIST="minimal standard desktop aurex-minimal aurex-standard aurex-desktop aurex-xfce-desktop aurex-supported aurex-inf aurex-smr aurex-asir aurex-mods aurex-daw ausias-netstation ausias-printstation aurex-fatcli ausias-classroom-student ausias-classroom-teacher ausias-desktop aurex-desktop-depinf ausias-desktop-depinf ausias-fatcli-desktop"
 
 BZR_DIST="lp:~ubuntu-core-dev/ubuntu-seeds/ubuntu.precise"
 BZR_PLAT="lp:~ubuntu-core-dev/ubuntu-seeds/platform.precise"
